--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apatani Interdisciplinary Research Society </title>
+    <title>Apatani Interdisciplinary Research Society</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Apatani Interdisciplinary Research Society </h1>
+        <div class="header-content">
+            <img src="img/logo.png" alt="Logo" class="logo" />
+            <h1>Apatani Interdisciplinary Research Society</h1>
+        </div>
     </header>
     
     <main>
@@ -25,7 +28,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2023 Apatani Interdisciplinary Research Society </p>
+        <p>&copy; 2023 Apatani Interdisciplinary Research Society</p>
     </footer>
 </body>
 </html>
